# pertau

./: .gitignore  Cargo.toml  README.md  index.html  style.css  tailwind_config.rs
src/: app.rs  error_pages.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/src/: main.rs
src/templates/: about.rs  index.rs  long.rs  mod.rs
static/: test.txt
tauri-back/: tauri.conf.json
