[package]
name = "pertau-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"

# perseus
perseus = { version = "0.3.6", features = ["hydrate", "server-side", "wasm2js"] }
sycamore = { version = "=0.8.1", features = ["ssr", "wasm-bindgen-futures", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fantoccini = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
# This is an internal convenience crate that exposes all integrations through features for testing
perseus-integration = { git = "https://github.com/framesurge/perseus", version = "0.4.0-beta.10", default-features = false}

[target.'cfg(target_arch = "wasm32")'.dependencies]
#

[workspace]
members = ["src-tauri"]
